deployment/example-workload/ingressroute/04-blue-green-delegation/root.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: blue-green-root
  namespace: default
spec: 
  virtualhost:
    fqdn: blue-green.bar.com
  routes: 
    - match: / 
      delegate:
        name: blue # Changing this to `green` will immediately switch to the other ingressroute object
                   # This can be helpful for testing different ingressroute configs
                   # or for improved UX doing blue/green application deployments
